--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -793,8 +793,8 @@
                                                 <img class="modal-content imgContent4" id="imgModal00" loading="lazy" style="max-width:250px; max-height: 200px; margin-top:10%; background:none; border:none;">
                                             </div>
 
-                                            <span class="contentLink"><a href="#" target="_blank">See initial on Adobe XD</a> |
-                                                <a href="#" target="_blank">See final on Adobe XD</a></span>
+                                            <span class="contentLink"><a href="https://xd.adobe.com/view/b0c518a9-94a2-4a8f-af14-0f3c48e16f74-e596/" target="_blank">See initial on Adobe XD</a> |
+                                                <a href="https://xd.adobe.com/view/3228059d-ceb6-4e9e-98ae-fb910de6069d-677b/" target="_blank">See final on Adobe XD</a></span>
                                         </div>
                                         <div class="col-md-7">
                                             <h6><b>Slumberous Cat</b></h6>
@@ -825,12 +825,11 @@
                                                 Below were the many different designs and iterations before this one. <span style="font-size: 0.4rem;">(*Special thanks to Mr Jason for helping me overcome my design hurdles)</span></p>
                                             <img src="images/diff0.webp" style="width:90%;" loading="lazy"/><br><br>
 
-                                            Final Color scheme:<br>TBC<!--
-                                           <span class="colorBox" style="background:#009688;" data-color="#009688"></span>
-                                           <span class="colorBox" style="background:#FF9800;" data-color="#FF9800"></span>
-                                           <span class="colorBox" style="background:#FFC107;" data-color="#FFC107"></span>
-                                           <span class="colorBox" style="background:#153243;" data-color="#153243"></span>
-                                                                     <span class="colorBox" style="background:#284B63;" data-color="#284B63"></span>--><br><br>
+                                            Final Color scheme:<br>
+                                           <span class="colorBox" style="background:#000000;" data-color="#000000"></span>
+                                           <span class="colorBox" style="background:#FFFFFF;" data-color="#FFFFFF"></span>
+                                           <span class="colorBox" style="background:#F7B6B6;" data-color="#F7B6B6"></span>
+                                            <br><br>
 
                                             <h6><b>Brand story</b></h6>
                                             <p>The brand centers around exploring the possible designs or code solutions with the client.
