--- a/testing/index.html
+++ b/testing/index.html
@@ -12,7 +12,7 @@
         <div class="main">
             <div class="container">
                 <img class="imgAnim" src="./images/talking_buddy.png">
-                <button class="btn_1">Login</button>
+                <button class="btn_1">Login / Signup</button>
             </div>
         
             <script src="./scripts/script.js"></script>
