--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -353,7 +353,7 @@
 
                                         <div class="col-md-5" style="height:50%; overflow: hidden; margin-left:20px; margin-right:-50px;">
                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/ncKsPQTv5Ms?si=FPtwbYNkZsfqHvk_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                            <p>^First Look</p>
+                                            <p>^Final output with some bugs,look at youtube desc for full details</p>
                                         </div>
                                         <div class="col-md-7">
                                             <h6><b>Sanctum of Shadows VR(Vertical Slice)</b></h6>
