--- a/webPg/index.html
+++ b/webPg/index.html
@@ -18,27 +18,30 @@
             </ul>
         </nav>
     </header>
+    <div class="after"><img src="images/newWrk.png" /></div>
 
-    <div class="hero" id="hero">
-        <div class="content">
-            <h1>Welcome to Our Webpage</h1>
-        <p>This is a basic single-page HTML with external CSS and JavaScript.</p>
-        <iframe src='https://my.spline.design/room-d3dc5c120b9c6e6183ac2d16d7309e1b/' frameborder='0' width='100%' height='300px'></iframe>
+
+    <div class="hero part" id="hero" >
+        <div class="content" style="height:100%;">
+            <h1 class="titleH">Welcome to Our Webpage</h1>
+            <p class="titleH">This is a basic single-page HTML with external CSS and JavaScript.</p>
+            <iframe style="max-width:90vw; margin: 0 auto; display: block;" src='https://my.spline.design/room-d3dc5c120b9c6e6183ac2d16d7309e1b/'
+                frameborder='0' width='100%' height='300px+20%'></iframe>
         </div>
     </div>
 
     <main>
-        <section id="about">
+        <section id="about" class="part">
             <div class="content">
-                <h2>About Us</h2>
-                <p>This is a brief description of our company.</p>
+                <h2 class="titleH">About Us</h2>
+                <p class="titleH">This is a brief description of our company.</p>
             </div>
         </section>
 
-        <section id="contact">
+        <section id="contact" class="part">
             <div class="content">
-                <h2>Contact Us</h2>
-                <p>Please feel free to contact us.</p>
+                <h2 class="titleH">Contact Us</h2>
+                <p class="titleH">Please feel free to contact us.</p>
             </div>
         </section>
     </main>
