--- a/webPg/index.html
+++ b/webPg/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Page HTML with External CSS and JavaScript</title>
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
 
 <body>
@@ -21,12 +22,13 @@
     <div class="after"><img src="images/newWrk.png" /></div>
 
 
-    <div class="hero part" id="hero" >
+    <div class="hero part" id="hero">
         <div class="content" style="height:100%;">
             <h1 class="titleH">Welcome to Our Webpage</h1>
             <p class="titleH">This is a basic single-page HTML with external CSS and JavaScript.</p>
-            <iframe style="max-width:90vw; margin: 0 auto; display: block;" src='https://my.spline.design/room-d3dc5c120b9c6e6183ac2d16d7309e1b/'
-                frameborder='0' width='100%' height='300px+20%'></iframe>
+            <iframe style="max-width:90vw; margin:auto; display: block;"
+                src='https://my.spline.design/room-d3dc5c120b9c6e6183ac2d16d7309e1b/' frameborder='0' width='100%'
+                height='300px+20%'></iframe>
         </div>
     </div>
 
@@ -52,5 +54,10 @@
 
     <script src="javascripts/script.js"></script>
 </body>
+<!-- SCM Music Player https://www.scmplayer.net -->
+<script type="text/javascript" src="https://www.scmplayer.net/script.js"
+    data-config="{'skin':'https://static.tumblr.com/mky4cgu/mi4meh6xd/nevefalsa-moral.css','volume':60,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Capital Cities - Safe And Sound','url':'https://youtu.be/47dtFZ8CFo8?feature=shared'},{'title':'Caravan Palace - Rock It For Me','url':'https://youtu.be/fBGSJ3sbivI?feature=shared'},{'title':'Digital Farm Animals %u2013 Didn%27t Know (feat. Yasmin)','url':'https://youtu.be/Y2rVekHgiEY?feature=shared'},{'title':'FORM SWEET FORM - GOATBED','url':'https://youtu.be/J4oUaESRjR4?feature=shared'},{'title':'INEXPLICABLE by The Correspondents','url':'https://youtu.be/OcmBowQsVrg?feature=shared'},{'title':'Katy Perry - Cry About It Later','url':'https://youtu.be/SjmXERieW9s?feature=shared'},{'title':'Mia Rodriguez - Psycho','url':'https://youtu.be/KGgOz_gRD_c?feature=shared'},{'title':'Monarchy-Disintegration','url':'https://youtu.be/9wjBf9E1LWo?feature=shared'},{'title':'Muse - Starlight','url':'https://youtu.be/Pgum6OT_VH8?feature=shared'},{'title':'Poets of the Fall - Carnival of Rust','url':'https://youtu.be/MKk1u5RMTn4?feature=shared'}]}"></script>
+<!-- SCM Music Player script end -->
+
 
 </html>
