--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -49,6 +49,7 @@
 
 
                     <b>Work Experience</b><br>
+                    - Tech Solution Engineering Intern <i>(Oracle Singapore, Intern) 2024-2025, 1 year</i><br>
                     - Service Crew & Manager <i>(Kiwami Ramen & Gyoza Bar, Part-Time) 2021-2023, 1 yr 5mths</i><br>
                     - Service Crew <i>(Aburi En, Contract) 2021, 8 mths</i><br>
                     - Digital Ambassador <i>(IMDA, Contract) 2020-2021, 8 mths</i><br><br>
@@ -61,7 +62,8 @@
                     - Nitec in Interactive Media Design <i>(Institute of Technical Education) 2013</i><br><br>
 
                     <b>Awards</b><br>
-                    -Director's Roll of Honor 2022<br>
+                    -REPUBLIC Award 2024<br>
+                    -Director's Roll of Honor 2022, 2023, 2024<br>
                     -Director's List  2012, 2015, 2016, 2022<br>
                     -Edusave Award for achievement, good leadership and service 2012, 2016<br>
                     -Edusave Certificate of academic achievement 2012, 2013, 2015,2016<br>
