--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -69,7 +69,7 @@
                     -Edusave Certificate of academic achievement 2012, 2013, 2015,2016<br>
                     -NYAA Bronze 2010<br><br>
 
-                    <a class='resume' aria-label='download resume' href="file/Yvonne_resume.pdf" target="_blank" download>
+                    <a class='resume' aria-label='download resume' href="file/Yvonne_Resume_V25.pdf" target="_blank" download>
                         Download Resume
                     </a>
                     
