--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -67,11 +67,11 @@
       <!-- Camera -->
      <a-entity position="0 1.5 4" camera look-controls wasd-controls>
         <a-camera>
-          <!-- <a-cursor 
+          <a-cursor 
     raycaster="objects: .raycastable"
     fuse="false"
     material="shader: flat; ">
-  </a-cursor> -->
+  </a-cursor>
         </a-camera>
       </a-entity>
      
