--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -119,8 +119,7 @@
         class="raycastable clickable hoverable"
         hover-color>
   
-      <a-plane 
-        id="mainLogo"
+      <a-plane
         width="1.6" 
         height="0.5" 
         color="none" 
@@ -130,8 +129,7 @@
         visible="false"
         class="raycastable"
         event-set__enter="_event: mouseenter; _target: #txt; text.color: #81C784;"
-        event-set__leave="_event: mouseleave; _target: #txt; text.color: white;"
-        link-handler>
+        event-set__leave="_event: mouseleave; _target: #txt; text.color: white;">
       </a-plane>
 
       <a-entity
@@ -140,7 +138,8 @@
         material="shader: msdf; color: white"
         position="0 0 0.01"
         class="raycastable"
-        hover_color>
+        hover_color
+        link-handler>
       </a-entity>
     </a-entity>
 
