--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,7 +82,7 @@
       <!-- Lights -->
      <!--<a-entity light="type: directional" intensity: "2" castShadow="true" position="1 3 2"></a-entity>-->
       <!-- <a-light type="point" position="0 4 0" intensity="5" castShadow="true" color="#ffffff"></a-light> -->
-      <a-light class="lght" type="point" position="0 4 2" intensity="3" castShadow="true" color="#ffffff" flicker-light="enabled: true"></a-light>
+      <a-light class="lght lghtSpt" type="point" position="0 4 2" intensity="3" castShadow="true" color="#ffffff" flicker-light="enabled: true"></a-light>
        <!-- <a-light type="spot"
          position="3 4 0"
          target="#floor"
@@ -105,7 +105,7 @@
          castShadow="true">
 </a-light> -->
 
-<a-light id="light" class="lght" light="type: directional; intensity: 3" castShadow="true" position="1 3 2" color="#2c7ac1" angle="45" target=".rm1" flicker-light="enabled: true"></a-light>
+<a-light id="light" class="lght lghtMain" light="type: directional; intensity: 3" castShadow="true" position="1 3 2" color="#2c7ac1" angle="45" target=".rm1" flicker-light="enabled: true"></a-light>
 
 <a-entity id="floor" position="0 0 0"></a-entity>
 
@@ -262,16 +262,16 @@
   </a-entity> -->
 
  <a-entity
-  text="value: USE YOUR MOUSE AND KEYBOARD TO EXPLORE THE 3D ENVIRONMENT ; font: Barrio-Regular-msdf.json; align: center; width: 4; color: black; shader: msdf; negate: false"
-  material="shader: msdf; color: black"
+  text="value: USE YOUR MOUSE AND KEYBOARD TO EXPLORE THE 3D ENVIRONMENT ; font: Barrio-Regular-msdf.json; align: center; width: 4; color: white; shader: msdf; negate: false"
+  material="shader: msdf; color: white"
   position="0.8 -0.8 2.01"
   scale="0.5 0.5 0.5"
   class="raycastable">
 </a-entity>
 
 <a-entity
-  text="value: USE YOUR MOUSE AND KEYBOARD TO EXPLORE THE 3D ENVIRONMENT ; font: Barrio-Regular-msdf.json; align: center; width: 4; color: white; shader: msdf; negate: false"
-  material="shader: msdf; color: white"
+  text="value: USE YOUR MOUSE AND KEYBOARD TO EXPLORE THE 3D ENVIRONMENT ; font: Barrio-Regular-msdf.json; align: center; width: 4; color: black; shader: msdf; negate: false"
+  material="shader: msdf; color: black"
   position="0.8 -0.8 2"
   scale="0.5 0.5 0.5"
   class="raycastable"
@@ -312,15 +312,15 @@
   </a-text> 
 
 
-  <a-gltf-model src="file/chair.glb" position="-1 -1 1.8" scale="0.02 0.02 0.02" rotation="-90 50 0"></a-gltf-model>
+  <a-gltf-model src="file/chair.glb" position="-1 -1 1.8" scale="0.02 0.02 0.02" rotation="-90 50 0" ></a-gltf-model>
 
   <a-plane id="slideshow" position="1.4 -0.4 1.6" rotation="0 -45 2" width="4" height="3" scale="0.2 0.2 0.2" material="shader: flat; src: #slide1"></a-plane>
 
   <a-entity id="camera" camera position="0 1.6 0"></a-entity>
 
-       <a-plane id="rm1" class="rm1" position="0 0 1" rotation="0 0 0" width="2" height="2" color="red" material="side: front" set-layer="1"></a-plane>
-       <a-plane class="rm1" position="1.5 0 1.5" rotation="0 135 0" width="1.5" height="2" color="orange" material="side: back" set-layer="1"></a-plane> 
-       <a-plane class="rm1" position="-1.5 0 1.5" rotation="0 -135 0" width="1.5" height="2" color="orange" material="side: back" set-layer="1"></a-plane> 
+       <a-plane id="rm1" class="rm1" position="0 0 1" rotation="0 0 0" width="2" height="2" color="red" material="side: front, emissiveIntensity: 0.5" set-layer="1" src="images/wood.jpg"></a-plane>
+       <a-plane class="rm1" position="1.5 0 1.5" rotation="0 135 0" width="1.42" height="2" color="orange" material="side: back" set-layer="1" src="images/wood.jpg"></a-plane> 
+       <a-plane class="rm1" position="-1.5 0 1.5" rotation="0 -135 0" width="1.42" height="2" color="orange" material="side: back" set-layer="1" src="images/wood.jpg"></a-plane> 
 
       <a-gltf-model src="file/storageRack.glb" position="1.3 -1 -1.1" scale="0.02 0.01 0.015" rotation="-90 90 0"></a-gltf-model>
 
@@ -384,7 +384,7 @@
     value="Hi, I am Yvonne. ;"
      font="mozillavr"
     negate="false"
-    position="2 0.6 2" 
+    position="1.95 0.6 1.95" 
     rotation="0 135 0"
     scale="3 3 3"
     color="#f7ce08"
@@ -394,7 +394,7 @@
     value="\n\n I have garnered multiple skills over the course of my journey, dipping into various fields such as food service, management, content creation(lesson materials), hairdressing, and tech. \n\nI enjoy learning new/different ways things can come to be. \n\nOutside of work, I am into gaming, reading/writing stories, editing/creating short videos and occasionally pulling tarot cards. \n\nI thrive best in hybrid or remote setups. \n\nI invite you to explore my portfolio and discover the projects that reflect my journey and skills.;"
      font="mozillavr"
     negate="false"
-    position="2 0.1 2" 
+    position="1.95 0.1 1.95" 
     rotation="0 135 0"
     scale="2 2 2"
     color="white"
@@ -475,20 +475,20 @@
   </a-entity> 
         
        <a-plane id="rm2" class="rm2" position="1 0 0" rotation="0 -90 0" width="2" height="2" color="pink" material="side: back"></a-plane>
-       <a-plane class="rm2"position="1.5 0 1.5" rotation="0 135 0" width="1.5" height="2" color="teal" material="side: front"></a-plane>
-       <a-plane class="rm2" position="1.5 0 -1.5" rotation="0 -135 0" width="1.5" height="2" color="teal" material="side: back"></a-plane> 
+       <a-plane class="rm2"position="1.5 0 1.5" rotation="0 135 0" width="1.42" height="2" color="teal" material="side: front" src="images/pattern1.jpg"></a-plane>
+       <a-plane class="rm2" position="1.5 0 -1.5" rotation="0 -135 0" width="1.42" height="2" color="teal" material="side: back" src="images/pattern2.jpg"></a-plane> 
 
        <a-plane id="rm3" class="rm3" position="0 0 -1" rotation="0 180 0" width="2" height="2" color="blue" material="side: front"></a-plane> 
-        <a-plane class="rm3" position="-1.5 0 -1.5" rotation="0 135 0" width="1.5" height="2" color="purple" material="side: front"></a-plane> 
-        <a-plane class="rm3" position="1.5 0 -1.5" rotation="0 -135 0" width="1.5" height="2" color="purple" material="side: front"></a-plane>
+        <a-plane class="rm3" position="-1.5 0 -1.5" rotation="0 135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane> 
+        <a-plane class="rm3" position="1.5 0 -1.5" rotation="0 -135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane>
 
        <a-plane id="rm4" class="rm4"position="-1 0 0" rotation="0 90 0" width="2" height="2" color="green" material="side: back"></a-plane>
-        <a-plane class="rm4" position="-1.5 0 1.5" rotation="0 -135 0" width="1.5" height="2" color="yellow" material="side: front"></a-plane> 
-        <a-plane class="rm4" position="-1.5 0 -1.5" rotation="0 135 0" width="1.5" height="2" color="yellow" material="side: back"></a-plane> 
+        <a-plane class="rm4" position="-1.5 0 1.5" rotation="0 -135 0" width="1.42" height="2" color="yellow" material="side: front"></a-plane> 
+        <a-plane class="rm4" position="-1.5 0 -1.5" rotation="0 135 0" width="1.42" height="2" color="yellow" material="side: back"></a-plane> 
 
 
 <a-plane position="0 1 0" rotation="-90 0 0" width="4" height="4" color="white" material="side: double"></a-plane>
-<a-plane position="0 -1 0" rotation="90 0 0" width="4" height="4" color="gray" material="side: double"></a-plane>
+<a-plane position="0 -1 0" rotation="90 0 0" width="4" height="4" color="white" material="side: double" src="images/rug.jpg"></a-plane>
 
       </a-entity>
     </a-scene>
