--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -478,6 +478,10 @@
        <a-plane class="rm2"position="1.5 0 1.5" rotation="0 135 0" width="1.42" height="2" color="teal" material="side: front" src="images/pattern1.jpg"></a-plane>
        <a-plane class="rm2" position="1.5 0 -1.5" rotation="0 -135 0" width="1.42" height="2" color="teal" material="side: back" src="images/pattern2.jpg"></a-plane> 
 
+
+      <a-gltf-model src="file/frame_D.glb" position="1.3 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 220 5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_C.glb" position="-1.5 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 -225 5" ></a-gltf-model>
+
        <a-plane id="rm3" class="rm3" position="0 0 -1" rotation="0 180 0" width="2" height="2" color="blue" material="side: front"></a-plane> 
         <a-plane class="rm3" position="-1.5 0 -1.5" rotation="0 135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane> 
         <a-plane class="rm3" position="1.5 0 -1.5" rotation="0 -135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane>
