--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -47,7 +47,7 @@
                 <div class="main"> <!--https://www.w3schools.com/howto/howto_js_portfolio_filter.asp-->
 
 
-                    <div id="subNavBox" style="font-size:">
+                    <div id="subNavBox" style="font-size: 0.6rem;">
                         <button class="subNav active" onclick="filterSelection('all')"> ALL</button>
                         <button class="subNav" onclick="filterSelection('design')"> DESIGN</button>
                         <button class="subNav" onclick="filterSelection('code')"> CODE</button>
@@ -256,14 +256,14 @@
                                             <img src="images/visitorList.webp" loading="lazy" style="width:90%;"/>
                                             <br><br>
                                             
-                                             <img src="images/paymentOverview.webp" loading="lazy" style="width:80%;"/>
+                                            <img src="images/paymentOverview.webp" loading="lazy" style="width:80%;"/>
                                             <br><br>
 
 
                                             <h6><b>Lessons Learned</b></h6>
                                             <ul class='itemList'>
                                                 <li>
-                                                     It was a good experience to comment each section so that you know which section of the code is for what.<br><br>
+                                                    It was a good experience to comment each section so that you know which section of the code is for what.<br><br>
                                                 </li>
                                                 <li>
                                                     It was also a good experience to experiment and add new features as I was allowed free range on the design and the add on functionality <br><br>
