--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,6 +15,28 @@
   
 
     <body>
+
+      <div id="dialogue-box" style="
+        position: fixed;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 50%;
+        height: 20px;
+        margin-bottom:70px;
+        padding: 20px;
+        background: rgba(91, 91, 91, 0.7);
+        color: white;
+        font-family: sans-serif;
+        z-index: 997;
+        font-size: 18px;
+        text-align: center;
+        display:none;">
+  <span id="dialogue-text"></span>
+</div>
+
+
+
       <video
   autoplay
   loop
@@ -44,7 +66,7 @@
   </div>
 </div>
        <!-- Buttons -->
-    <div class="controls">
+    <div class="controls" style="z-index:998">
       <button onclick="rotateRoom(90)">⟲ Left</button>
       <button onclick="resetRoom()">⟳ RESET</button>
       <button onclick="rotateRoom(-90)">⟳ Right</button>
@@ -479,8 +501,9 @@
        <a-plane class="rm2" position="1.5 0 -1.5" rotation="0 -135 0" width="1.42" height="2" color="teal" material="side: back" src="images/pattern2.jpg"></a-plane> 
 
 
-      <a-gltf-model src="file/frame_D.glb" position="1.3 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 220 5" ></a-gltf-model>
-      <a-gltf-model src="file/frame_C.glb" position="-1.5 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 -225 5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_D.glb" id="plane1" class="raycastable" position="1.3 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 220 5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_C.glb" position="-1.35 0.2 -1.6" scale="0.01 0.01 0.01" rotation="0 -225 5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_O.glb" position="-0.1 -0.1 -1.2" scale="0.01 0.01 0.01" rotation="10 185 -5" ></a-gltf-model>
 
        <a-plane id="rm3" class="rm3" position="0 0 -1" rotation="0 180 0" width="2" height="2" color="blue" material="side: front"></a-plane> 
         <a-plane class="rm3" position="-1.5 0 -1.5" rotation="0 135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane> 
