--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,9 +23,10 @@
         transform: translateX(-50%);
         width: 50%;
         height: 20px;
-        margin-bottom:70px;
+        border-radius: 4px;
+        margin-bottom:110px;
         padding: 20px;
-        background: rgba(91, 91, 91, 0.7);
+        background: rgba(60, 60, 60, 0.7);
         color: white;
         font-family: sans-serif;
         z-index: 997;
@@ -73,7 +74,7 @@
       
     </div>
 
-    <a-scene background="color: #111" shadow="type: pcfsoft" cursor="rayOrigin: mouse; fuse: false"
+    <a-scene background="color: #111" shadow="type: pcfsoft" cursor="rayOrigin: mouse; fuse: false" keyboard-shortcuts="enterVR: false"
    raycaster="objects: .raycastable" > <!--stats -->
 
      <a-assets>
@@ -167,7 +168,7 @@
     </a-entity>
 
       <a-entity id="nav" look-at="[camera]">
-         <a-entity position="-0.8 1.7 2.01" text="value: COPYRIGHT © 2025 SLUMBEROUS CAT; font: Barrio-Regular-msdf.json; width: 5; color: lightgray; shader: msdf; negate: false"
+         <a-entity position="-0.8 1.9 2.08" text="value: COPYRIGHT © 2025 SLUMBEROUS CAT; font: Barrio-Regular-msdf.json; width: 5; color: lightgray; shader: msdf; negate: false"
             material="shader: msdf; color: lightgray"
             scale="0.5 0.5 0.5"
             class="raycastable">
@@ -501,9 +502,9 @@
        <a-plane class="rm2" position="1.5 0 -1.5" rotation="0 -135 0" width="1.42" height="2" color="teal" material="side: back" src="images/pattern2.jpg"></a-plane> 
 
 
-      <a-gltf-model src="file/frame_D.glb" id="plane1" class="raycastable" position="1.3 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 220 5" ></a-gltf-model>
-      <a-gltf-model src="file/frame_C.glb" position="-1.35 0.2 -1.6" scale="0.01 0.01 0.01" rotation="0 -225 5" ></a-gltf-model>
-      <a-gltf-model src="file/frame_O.glb" position="-0.1 -0.1 -1.2" scale="0.01 0.01 0.01" rotation="10 185 -5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_D.glb" id="designF" class="raycastable" position="1.3 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 220 5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_C.glb" id="codeF" class="raycastable" position="-1.35 0.2 -1.6" scale="0.01 0.01 0.01" rotation="0 -225 5" ></a-gltf-model>
+      <a-gltf-model src="file/frame_O.glb" id="othersF" class="raycastable" position="-0.1 -0.1 -1.2" scale="0.01 0.01 0.01" rotation="10 185 -5" ></a-gltf-model>
 
        <a-plane id="rm3" class="rm3" position="0 0 -1" rotation="0 180 0" width="2" height="2" color="blue" material="side: front"></a-plane> 
         <a-plane class="rm3" position="-1.5 0 -1.5" rotation="0 135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane> 
