--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="stylesheet/style2.css">
        <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
        <script src="https://unpkg.com/aframe-event-set-component@5.x.x/dist/aframe-event-set-component.min.js"></script>
-
+      <link rel="icon" type="image/webp" sizes="32x32" href="images/favicon-32x32.webp"/>
 
     </head>
   
@@ -508,8 +508,15 @@
 </a-entity>
 
       <!-- <a-gltf-model src="file/frame_D.glb" id="designF" class="raycastable" position="1.3 0.2 -1.5" scale="0.01 0.01 0.01" rotation="0 220 5" link-handler ></a-gltf-model> -->
+      <a-entity id="codeBtn" class="raycastable" link-handler>
+  <a-box visible="false" depth="1" height="1" width="1"></a-box>
       <a-gltf-model src="file/frame_C.glb" id="codeF" class="raycastable" position="-1.35 0.2 -1.6" scale="0.01 0.01 0.01" rotation="0 -225 5" ></a-gltf-model>
+      </a-entity>
+
+      <a-entity id="otherWrkBtn" class="raycastable" link-handler>
+  <a-box visible="false" depth="1" height="1" width="1"></a-box>
       <a-gltf-model src="file/frame_O.glb" id="othersF" class="raycastable" position="-0.1 -0.1 -1.2" scale="0.01 0.01 0.01" rotation="10 185 -5" ></a-gltf-model>
+      </a-entity>
 
        <a-plane id="rm3" class="rm3" position="0 0 -1" rotation="0 180 0" width="2" height="2" color="blue" material="side: front"></a-plane> 
         <a-plane class="rm3" position="-1.5 0 -1.5" rotation="0 135 0" width="1.42" height="2" color="purple" material="side: front"></a-plane> 
